<resources>
    <string name="app_name">CompleteLoginApi</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="blood_group">Blood group</string>
    <string name="usertype">User type</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_otp">Enter Otp</string>
</resources>